@@ -317,3 +317,4 @@ VDR Plugin 'femon' Revision History
 - Updated Italian translation (Thanks to Diego Pierotto).
 - Fixed a memory leak.
 - Added a check for the minimum OSD height.
+- Replaced "Use single area (8bpp)" option with VDR's "Setup/OSD/Anti-alias".
